# teiniker-lectures-python

./: .gitignore  README.md  requirements.txt
.vscode.template/: launch.json  settings.json
basics/: README.md
basics/conditionals/: README.md
basics/functions/: README.md  max_value.py  print_user.py  swap_value.py
basics/jupyter-notebook/: README.md
basics/loops/: README.md  for_loop.py
basics/modules/: README.md
basics/packaging/: .gitignore  README.md  pyproject.toml
basics/packaging/app/: demo.py
basics/types/: README.md  dictionary.py  numbers.py  set.py  tuples.py
basics/virtual-environments/: README.md
coding-style-guide/: README.md
configuration-management/: README.md
configuration-management/building/: README.md
configuration-management/building/packaging/electronics/: README.md  pyproject.toml
configuration-management/building/packaging/electronics/src/electronics/: parts.py
configuration-management/building/packaging/electronics/test/: resistor_test.py  test_resistor.py
configuration-management/coding-standards/: README.md
configuration-management/debugging/: README.md
configuration-management/testing/: README.md
jupyter-notebook/: README.md
libraries/: README.md
libraries/files/: README.md
libraries/filesystem/: README.md
libraries/flask/: README.md
libraries/http/: README.md
libraries/pandas/: README.md
libraries/pytest/: README.md
libraries/regular-expressions/: README.md
libraries/sockets/: README.md
oop/: README.md
oop/associations/: README.md
setup/: README.md  virtual-lab.md
(+167 files in other folders)
