[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_lib"
version = "0.1.0"
description = "Simple Algorthm Library"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "homer", email = "homer@springfield.com" }]
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
